fix: Add explicit visibility style rule

--- a/draft-packages/divider/KaizenDraft/Divider/styles.module.scss
+++ b/draft-packages/divider/KaizenDraft/Divider/styles.module.scss
@@ -6,6 +6,7 @@
   border: 0;
   margin: 0;
   border-radius: $kz-border-solid-border-radius;
+  visibility: visible;
 }
 
 .content {
